Fixes teacher setup (story 35) bar z-index

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2744,7 +2744,8 @@ p.text-muted {
   display: block;
   height: 55px;
   width: 100%;
-  z-index: 1023;
+  z-index: 10;
+  /* z-index: 1023; This is previous value. */
   -webkit-box-shadow: none;
           box-shadow: none;
   /* position: fixed; */
